boulder/tests/error/type/sum_member.bo
# Cannot find type `u17`
# (4:

fn test(a: u32 | u17) { }